# invoke

./: .gitignore  .prettierrc.json  LICENSE  mise.toml  package.json
.githooks/: pre-commit
cli/: Cargo.toml
cli/skill/: SKILL.md
cli/skill/references/: native-apps.md  pack-api.md  reading.md  vocabulary.md  web.md
cli/src/: app.rs  element.rs  error.rs  key.rs  location.rs  main.rs  pack.rs  pipe.rs  protocol.rs  sandbox.rs  scroll.rs  service.rs  upgrade.rs
cli/src/socket/: mod.rs
cli/src/util/: duration.rs
crates/common/: Cargo.toml
crates/common/src/: alphanum.rs  bool_expr.rs  handle_map.rs  identifier.rs  lib.rs  main_thread.rs  pending.rs  process.rs  protocol.rs  version.rs
crates/common/src/accessibility/: action.rs  attribute.rs  element.rs  element_handle.rs  filter.rs  mod.rs  notification.rs  orientation.rs  role.rs  sort_direction.rs  subrole.rs  value.rs
crates/hid/: Cargo.toml
crates/hid/src/: keyboard.rs  lib.rs  mouse.rs
crates/invoke/: Cargo.toml
crates/invoke/src/: ax.rs  capability.rs  duration.rs  instruction.rs  lib.rs  monitor.rs  resource.rs  when.rs
crates/invoke/src/pack/: host.rs  mod.rs  pack.rs  proto.rs
crates/json-template/: Cargo.toml
crates/json-template/src/: lib.rs
crates/observer/: Cargo.toml
crates/observer/src/: accessibility.rs  eventtap.rs  lib.rs  midi.rs  workspace.rs
crates/pack-launch-macos/: Cargo.toml
crates/pack-launch-macos/src/: lib.rs
crates/shortcut/: Cargo.toml
crates/shortcut/src/: chord.rs  lib.rs  predicate.rs
react-server/: client.ts  flight.ts  package.json  server.ts
runtime/bun/: package.json  tsconfig.json
runtime/bun/scripts/: build.ts
runtime/bun/scripts/pack-types/: generate.ts  globals.d.ts  invoke-ui.ts  invoke.ts  package.json  rollup.config.mjs  tsconfig.json
runtime/bun/scripts/proto-types/: generate.rs
runtime/bun/src/: flight.ts  globals.ts  index.ts  proto.d.ts  register.ts  rpc.ts  transport.ts
runtime/bun/src/modules/invoke/: index.ts  ui.ts
