[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
dispatch2 = { version = "0.3.0", optional = true }
log = "0.4.28"
objc2 = { version = "0.6.2", optional = true }
objc2-app-kit = { version = "0.3.2", optional = true, features = ["NSRunningApplication"] }
objc2-application-services = { version = "0.3.1", optional = true }
objc2-core-foundation = "0.3.1"
objc2-foundation = { version = "0.3.2", optional = true }
papaya = { version = "0.2.3", optional = true }
schemars = { version = "1.0.4", optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
specta = { version = "2.0.0-rc.25", optional = true, features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["sync"], optional = true }

wildmatch = { version = "2", optional = true }

smallvec = { version = "1.15.1", features = ["serde"], optional = true }

[features]
default = ["serde", "specta", "schemars", "accessibility", "main-thread"]
serde = ["dep:serde", "dep:serde_json"]
specta = ["dep:specta"]
schemars = ["dep:schemars"]
pending = ["dep:tokio"]
main-thread = ["dep:dispatch2", "dep:objc2", "dep:tokio"]
process = ["dep:objc2-app-kit", "dep:objc2-foundation"]
accessibility = [
    "dep:objc2-application-services",
    "dep:papaya",
    "dep:wildmatch",
    "dep:smallvec",
    "main-thread",
]
