[package]
name = "hid"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.3"
enumset = "1.1.7"
log = "0.4.27"
objc2-core-foundation = "0.3.1"
objc2-core-graphics = "0.3.1"
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
specta = { version = "2.0.0-rc.25", optional = true, features = ["derive"] }
thiserror = "2.0.14"
common = { version = "0.1.0", path = "../common" }
schemars = { version = "1.0.4", optional = true, features = ["derive"] }
napi = { version = "3.0.0", optional = true }
napi-derive = { version = "3.0.0", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json"]
specta = ["dep:specta"]
schemars = ["dep:schemars"]
napi = ["dep:napi", "dep:napi-derive"]
