[package]
name = "shortcut"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
serde = { version = "1.0.219", optional = true, features = ["derive"] }
specta = { version = "2.0.0-rc.25", optional = true, features = ["derive"] }
thiserror = "2.0.12"
common = { version = "0.1.0", path = "../common" }
schemars = { version = "1.1.0", optional = true, features = ["derive"] }
napi = { version = "3.0.0", optional = true, features = ["serde-json"] }
napi-derive = { version = "3.0.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
serde = ["dep:serde"]
specta = ["dep:specta"]
schemars = ["dep:schemars"]
napi = ["dep:napi", "dep:napi-derive", "dep:serde_json", "serde"]
